workaround for no spacemission reply